--- a/CLONING.rdoc
+++ b/CLONING.rdoc
@@ -1,10 +1,14 @@
-= BasicApp
+= Cloning BasicApp
 
-A basic RubyGem structure for command line applications. BasicApp provides
-no stand-alone functionality.  It purpose is to provide a repository for
-jump-starting a new RubyGem based CLI application.
+BasicApp provides no stand-alone functionality.  It purpose is to 
+provide a repository for jump-starting a new RubyGem based CLI 
+application and provide a point to cloned applications for pulling in 
+future enchancements and fixes.
 
-See CLONING.rdoc for more info.
+== Jump-starting a new project
+
+TODO: add instructions
+
 
 == Note on Patches/Pull Requests
  
